feat: setup online mode

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "faker": "^6.6.6",
     "html-react-parser": "^1.4.11",
     "lodash": "^4.17.21",
@@ -22,6 +23,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "remove-accents": "^0.4.2",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -77,6 +80,7 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/crypto-js": "^4.1.1",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
